--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<div id="app" style="width: 100%; height: 600px;"></div>
+<div id="root"></div>
 
-<script src="./build/bundle.js"></script>
+<script src="http://localhost:8888/build/app.js"></script>
+<script src="./build/app.js"></script>
 </body>
 </html>
