--- a/index-dev.html
+++ b/index-dev.html
@@ -8,6 +8,6 @@
 
 <div id="root"></div>
 
-<script src="./build/app.js"></script>
+<script src="http://localhost:8888/build/app.js"></script>
 </body>
 </html>
