--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <div id="root"></div>
 
-<script src="./build/app.js"></script>
+<script src="./build/assets/wordCloud.js"></script>
 </body>
 </html>
